@@ -12,7 +12,7 @@
 .\" # Purpose  : Manpage for the banner program
 .\" #
 .\" # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-.TH banner "1" "April 2013" "Banner" "Kenneth J. Pronovici"
+.TH banner "1" "Sep 2014" "Banner" "Kenneth J. Pronovici"
 .SH NAME
 banner \- prints a short string to the console in very large letters
 .SH SYNOPSIS
@@ -24,9 +24,11 @@ This is a classic-style banner program similar to the one found in Solaris or
 AIX in the late 1990s.  It prints a short string to the console in very large
 letters.
 .PP
-If $COLUMNS is exported in the environment, it is taken to be the width of
-the terminal. Otherwise, a terminal width of 80 characters is assumed, and
-banners that do not fit will be truncated.
+Banners that do not fit in the terminal will be truncated.  If $COLUMNS is
+exported in the environment, it is taken to be the width of the terminal.  If
+$COLUMNS is not exported, and TIOCGWINSZ is available on the platform, then its
+idea of the terminal size is used.  Otherwise, a terminal width of 80
+characters is assumed.  
 .PP
 Usage is straightforward.  For instance, a single word is printed like this:
 .PP
@@ -92,7 +94,7 @@ Report bugs to <support@cedar\-solutions.com>.
 .SH AUTHOR
 Written by Kenneth J. Pronovici <pronovic@ieee.org>.
 .SH COPYRIGHT
-Copyright (c) 2000\-2004.2007,2013 Kenneth J. Pronovici.
+Copyright (c) 2000\-2004.2007,2013,2014 Kenneth J. Pronovici.
 .br
 This is free software; see the source for copying conditions.  There is
 NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
