@@ -570,9 +570,11 @@ static void usage(char *program)
           "AIX in the late 1990s.  It prints a short string to the console in very large\n"
           "letters.\n"
           "\n"
-          "If $COLUMNS is exported in the environment, it is taken to be the width of the\n"
-          "terminal. Otherwise, a terminal width of %d characters is assumed, and banners\n"
-          "that do not fit will be truncated.\n"
+          "Banners that do not fit in the terminal will be truncated.  If $COLUMNS is\n"
+          "exported in the environment, it is taken to be the width of the terminal.  If\n"
+          "$COLUMNS is not exported, and TIOCGWINSZ is available on the platform, then its\n"
+          "idea of the terminal size is used.  Otherwise, a terminal width of %d\n"
+          "characters is assumed.\n"
           "\n"
           "This is %s %s.\n"
           "$LastChangedDate$.\n"
